Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-73038

egl_viv: invalid conversion of EGLNativeDisplayType

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.12.1
    • 5.12.1
    • QPA: EGLFS
    • None
    • Linux/Other display system

      After fix for QTBUG-72564 all flags from egl.pc are passed to build, which causes EGLNative types to not match the functions used to create them.

      EGLNativeDisplayType etc., are now typedef'ed as wl_display* instead of void*, which the function returns.

      /home/sapiippo/development/yocto/sumo/build-apalis-imx6/tmp/work/cortexa9hf-neon-mx6qdl-poky-linux-gnueabi/qtbase/5.12.1+gitAUTOINC+f1aa4c076f-r0/git/src/plugins/platforms/eglfs/deviceintegration/eglfs_viv_wl/qeglfsvivwlintegration.cpp: In member function 'virtual void QEglFSVivWaylandIntegration::platformInit()':
      /home/sapiippo/development/yocto/sumo/build-apalis-imx6/tmp/work/cortexa9hf-neon-mx6qdl-poky-linux-gnueabi/qtbase/5.12.1+gitAUTOINC+f1aa4c076f-r0/git/src/plugins/platforms/eglfs/deviceintegration/eglfs_viv_wl/qeglfsvivwlintegration.cpp:63:34: error: invalid conversion from 'void*' to 'EGLNativeDisplayType {aka wl_display*}' [-fpermissive]
           mNativeDisplay = fbGetDisplay(mWaylandDisplay);
                            ~~~~~~~~~~~~^~~~~~~~~~~~~~~~~
      /home/sapiippo/development/yocto/sumo/build-apalis-imx6/tmp/work/cortexa9hf-neon-mx6qdl-poky-linux-gnueabi/qtbase/5.12.1+gitAUTOINC+f1aa4c076f-r0/git/src/plugins/platforms/eglfs/deviceintegration/eglfs_viv_wl/qeglfsvivwlintegration.cpp: In member function 'virtual wl_egl_window* QEglFSVivWaylandIntegration::createNativeWindow(QPlatformWindow*, const QSize&, const QSurfaceFormat&)':
      /home/sapiippo/development/yocto/sumo/build-apalis-imx6/tmp/work/cortexa9hf-neon-mx6qdl-poky-linux-gnueabi/qtbase/5.12.1+gitAUTOINC+f1aa4c076f-r0/git/src/plugins/platforms/eglfs/deviceintegration/eglfs_viv_wl/qeglfsvivwlintegration.cpp:84:51: error: invalid conversion from 'void*' to 'EGLNativeWindowType {aka wl_egl_window*}' [-fpermissive]
           EGLNativeWindowType eglWindow = fbCreateWindow(mNativeDisplay, 0, 0, size.width(), size.height());
                                           ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
       

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lagocs Laszlo Agocs
            sapiippo Samuli Piippo
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes