egl_viv: cast EGLNative return types from vivante functions

All vivante functions return void* even when the actual native type
(EGLNativeDisplayType, EGLNativeWindowType, etc.) might be typedef'ed
as something else, as they do when the CFLAGS from egl.pc are now used.

Task-number: QTBUG-73038
Change-Id: I7650b691663201d03d8c15ead155aa3c231fba29
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>